Écriture de la Javadoc pour l'étape 5, suppression du deuxième constructeur privé de GameState et modifications qu'elle implique, corrections d'immuabilité, mise en forme